--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-fn-map": "yarn ts-node --skip-project scripts/generate-function-map.ts"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.1",
@@ -21,12 +22,16 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@0x/contract-artifacts": "^3.18.1",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/strings": "^5.7.0",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.2"
   }
 }
